--- a/assets/css/vendor.css
+++ b/assets/css/vendor.css
@@ -2165,8 +2165,8 @@ pre code {
 .col-lg-12 {
   position: relative;
   min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
+/*  padding-left: 15px;
+  padding-right: 15px;*/
 }
 
 .col-xs-1,
