--- a/assets/css/theme-default.css
+++ b/assets/css/theme-default.css
@@ -53,6 +53,29 @@
 
   @mixin =============================================================*/
 
+
+
+/*custom*/
+
+.bannerIzquierdo{
+    position: sticky;
+    padding-top: 100px;
+    padding-left: 20px;
+    padding-right: 10px;
+}
+
+.bannerDerecho{
+    position: sticky;
+    padding-top: 100px;
+    padding-left: 10px;
+    padding-right: 20px;
+}
+
+.cuerpoCentral{
+  padding-right: 20px;
+}
+
+
 @-webkit-keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     -webkit-transform: translateY(0);
