--- a/assets/css/theme-default.css
+++ b/assets/css/theme-default.css
@@ -62,6 +62,11 @@
     padding-top: 100px;
     padding-left: 20px;
     padding-right: 10px;
+    padding-bottom: 20px;
+}
+
+.bannerIzquierdo img{
+  margin-top: 10px;
 }
 
 .bannerDerecho{
@@ -69,7 +74,13 @@
     padding-top: 100px;
     padding-left: 10px;
     padding-right: 20px;
+    padding-bottom: 10px;
 }
+
+.bannerDerecho img{
+  margin-top: 10px;
+}
+
 
 .cuerpoCentral{
   padding-right: 20px;
